--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,24 @@
     padding: 0;
 }
 
+@keyframes remove {
+
+    from{left: 0%;}
+    to{left: -1500px;}
+    
+}
+
+@keyframes menu{
+    0%{width: 0%; height: 0%;}
+    100%{width: 60%; height: 60%;}
+}
+
+@keyframes menuoff{
+    0%{width: 60%; height: 60%;}
+    100%{width: 0%; height: 0%;}
+}
+
+
 body{
     width: 100%;
     height: 100%;
@@ -10,10 +28,18 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+.titulo{
+    margin-top: 7%;
+    color: white;
+    font-size: 60px;
+}
+
 .app{
     width: 100%;
     height: 100vh;
-    background-color: #272727;
+    /* background-color: #272727; */
+    /* background-color: #74b9ff; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,47 +49,69 @@ body{
 .container-nt{
     width: 50%;
     height: 200px;
-    margin-top: 50px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 5px;
     /* background-color: rgba(255, 228, 196, 0.288); */
 }
 
-        .app hr{
-            background-color: white;
-            width: 170px;
+        .container-nt p{
+            color: rgba(255, 255, 255, 0.623);
+            font-family: Arial, Helvetica, sans-serif;
+            
         }
 
         #novaTarefa{
-            width: 100%;
+            width: 45%;
             text-align: center;
-            background-color: transparent;
-            color: #636e72 ;
+            /* background-color: transparent; */
+            color: #636e72;
+            background-color: white;
             font-size: 20px;
             border: none;
             outline: none;
             margin-bottom: 7px;
+            border: 1px solid rgba(255, 255, 255, 0.623);
+            padding: 10px;
+            border-radius: 10px;
+            /* border-bottom: 1px white solid; */
             /* margin: 20px; */
+            transition: .7s;
         }
 
+        #novaTarefa:hover{
+            transition: .7s;
+            color: #636e72;
+            background-color: white;
+        }
+        /* .container-nt span{
+            width: 70px;
+            height: 1px;
+            background-color: #636e72;
+        } */
         #add{
             width: 100%;
             height: 40px;
-            margin-top: 10px;
-            font-size: 50px;
+
+            font-size: 40px;
             color: white;
             background-color: transparent;
+
             outline: none;
             border: none;
-            
+            cursor: pointer;
+        }
+        #add box-icon{
+            /* width: 100%; */
+            /* height: 100%; */
+            /* background-color: white; */
         }
 
         label{
-            /* width: 100%;
-            height: 105px; */
-            /* background-color: red; */
+          cursor: pointer;
         }
 
         .bx{
@@ -84,17 +132,31 @@ body{
     gap: 5px;
 }
 
+
+
     .lista{
         width: 500px;
         height: 50px;
         font-size: 18px;
-        /* background-color: aquamarine; */
+        background-color: #f1f1f191;
         position: relative;
         display: flex;
         align-items: center;
         /* justify-content: center; */
         gap: 25px;
-        color: #636e72 ;
+        color: #474949 ;
+        /* border-bottom: 1px solid white; */
+        border-radius: 10px;
+        /* background-color: rgba(230, 231, 230, 0); */
+        margin-bottom: 5px;
+        padding: 5px;
+        transition: .5s;
+
+    }
+
+    .lista:hover{
+        padding: 10px;
+        transition: .5s;
 
     }
 
@@ -102,7 +164,117 @@ body{
         display: none;
     }
 
+    #detalhes{
+        display: none;
+        z-index: 1000;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 60%;
+        height: 60%;
+            
+        border-radius: 15px;
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
 
+        -webkit-box-shadow: 0px 1px 12px 1px rgba(0,0,0,0.84);
+        -moz-box-shadow: 0px 1px 12px 1px rgba(0,0,0,0.84);
+        box-shadow: 0px 1px 12px 1px rgba(0,0,0,0.84);
+
+        transition: 1s;
+            }
+
+
+    .on{
+        display: block;
+    }
+    .off{
+        display: none;
+    }
+    .formatacao{
+        /* padding: 10px; */
+        width: 100%;
+        height: 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #272727;
+        gap: 20px;
+    }
+
+    .formatacao button{
+        outline: none;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        transition: .5s;
+    }
+    
+   
+     .formatacao button:hover{
+         transition: .5s;
+         position: relative;
+        padding: 20px;
+         /* top: -5px; */
+         /* padding: 1px; */
+        /* border-radius: 5px; */
+    } 
+
+    #janela{
+        background-color: #272727;
+        width:100%;
+        height: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        /* position: absolute; */
+        /* right: 10px; */
+        /* top: 10px; */
+        /* cursor: pointer; */
+        color: white;
+        font-weight: 700;
+    }
+
+
+    #janela span{
+        margin:15px;
+        cursor: pointer;
+    }
+    .texto{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+    }
+
+    .texto textarea{
+        margin-top: 15px;
+        width: 90%;
+        height: 100%;
+        font-size: 19px;
+        font-family: Arial, Helvetica, sans-serif;
+        color: black;
+        outline: none;
+        border: none;
+        background-color: transparent;
+        /* text-indent: 20px; */
+    }
+    
+   
+    .box-none{
+        display: none;
+
+    }
+
+    .box-flex{
+        display: flex;
+    }
+
+
+    
     .btns{
         display: flex;
         justify-content: center;
